@@ -17,6 +17,7 @@ Revision history for SPVM
         * Remove callback_t. The feature of callback_t is merged into interface_t.
         * Remove SPVM_NATIVE_C_BASIC_TYPE_CATEGORY_CALLBACK
         * Change ID of SPVM_NATIVE_C_BASIC_TYPE_CATEGORY_ANY_OBJECT from 10 to 9
+        * Remove "byte_object_basic_type_id" native API. ID 9 is reused by "api" native API.
 0.9514  2022-05-02
         [CHANGE]
         * Add no_compiler_api to SPVM::Builder::Config::Exe
